--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="logo">
                <a href="#">
-                  <h1 class="logo">FASHION CENTER</h1>
+                  <h1 class="logo">NS MART</h1>
                </a>
             </div>
 
