--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <title>FASHION CENTER</title>
+   <title>NS MART</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -37,7 +37,7 @@
                   <li class="menu-item menu-item-has-children">
                      <a href="#" data-toggle="sub-menu">kid'S FASHION <i class="plus"></i></a>
                      <ul class="sub-menu">
-                        <li class="menu-item"><a href="#">Baby T-Shirts</a></li>
+                        <li class="menu-item"><a href="#">mobile</a></li>
                         <li class="menu-item"><a href="#">Two Pieces Kids</a></li>
                         <li class="menu-item"><a href="#">Jackets And Coats</a></li>
                         <li class="menu-item"><a href="#">Sweatshirts</a></li>
