--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="menu-item"><a href="#">mobile</a></li>
                         <li class="menu-item"><a href="#">Two Pieces Kids</a></li>
                         <li class="menu-item"><a href="#">Jackets And Coats</a></li>
-                        <li class="menu-item"><a href="#">Sweatshirts</a></li>
+                        <li class="menu-item"><a href="#">Samsung</a></li>
                         <li class="menu-item"><a href="#">Baby Swimwear</a></li>
                      </ul>
                   </li>
