--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li class="menu-item"><a href="#">Two Pieces Kids</a></li>
                         <li class="menu-item"><a href="#">Jackets And Coats</a></li>
                         <li class="menu-item"><a href="#">Samsung</a></li>
-                        <li class="menu-item"><a href="#">Baby Swimwear</a></li>
+                        <li class="menu-item"><a href="#">Iphone</a></li>
                      </ul>
                   </li>
                   <li class="menu-item menu-item-has-children">
